# nah

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST_SPEC_REVIEW.md  MIGRATION.md  README.md  REFACTOR_PROGRESS.md  SPEC.md  UNIFIED_JSON_ANALYSIS.md  conanfile.py  install.ps1  install.sh  package.json  run_tests.sh  test.nah
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: Dependencies.cmake
docs/: Doxyfile  README.md  cli.md  concepts.md  getting-started-app.md  getting-started-bundle.md  getting-started-host.md  getting-started-nak.md  how-it-works.md  mainpage.md  planned-android.md  troubleshooting.md
docs/schemas/: README.md  app-record.v1.json  nah.v1.json  nak-record.v1.json  nak.v1.json  nap.v1.json
examples/: README.md  test.nak  test.nap  test_app.nap  test_simple.nap
examples/apps/app/: CMakeLists.txt
examples/apps/app/assets/: config.json
examples/apps/app/src/: main.c
examples/apps/app_c/: CMakeLists.txt  README.md
examples/apps/app_c/assets/: config.json
examples/apps/app_c/cmake/: bin2header.cmake
examples/apps/app_c/src/: main.cpp
examples/apps/game-app/: CMakeLists.txt
examples/apps/game-app/assets/: game_config.json
examples/apps/game-app/src/: main.cpp
examples/apps/script-app/: CMakeLists.txt
examples/apps/script-app/assets/: config.txt
examples/apps/script-app/scripts/: main.sh
examples/apps/suite-app/: CMakeLists.txt  README.md
examples/apps/suite-app/assets/: config.json
examples/apps/suite-app/src/: converter.c  editor.c  launcher.c  viewer.c
examples/cmake/: NahAppTemplate.cmake
examples/conan-sdk/: .gitignore  CMakeLists.txt  README.md  conanfile.py  nak.json.in
examples/conan-sdk/META/: nak.json.in  nak.toml.in
examples/conan-sdk/include/sdk/: assets.hpp  crypto.hpp  engine.hpp  network.hpp
examples/conan-sdk/resources/: engine.json
examples/conan-sdk/src/: assets.cpp  crypto.cpp  engine.cpp  network.cpp
examples/host/: CMakeLists.txt  README.md  host.json  host.toml  nah.json  run.sh  setup.sh  standalone_test.cpp
examples/host/profiles/: canary.json  canary.toml  default.json  default.toml  production.json  production.toml
examples/host/src/: contract_inspector.cpp  host_api_demo.cpp  host_c_api_demo.c
examples/scripts/: build_all.sh  clean_all.sh  common.sh  run_apps.sh  setup_host.sh
examples/sdk/: CMakeLists.txt  README.md  nak.json.in
examples/sdk/META/: nak.json.in  nak.toml.in
examples/sdk/include/framework/: framework.h
examples/sdk/lib/: framework.c  lifecycle.c  resources.c
examples/sdk/resources/: default_theme.json  framework.conf
include/nah/: capabilities.hpp  compose.hpp  contract.hpp  expansion.hpp  export.hpp  host_profile.hpp  install_record.hpp  manifest.hpp  manifest_builder.hpp  manifest_generate.hpp  manifest_tlv.hpp  materializer.hpp  nah.h  nah_core.h  nah_exec.h  nah_fs.h  nah_host.h  nah_json.h  nah_overrides.h  nah_semver.h  nahhost.hpp  nak_record.hpp  nak_selection.hpp  packaging.hpp  path_utils.hpp  platform.hpp  semver.hpp  types.hpp  warnings.hpp
npm/: README.md  package.json
npm-bin/: nah
npm-scripts/: install.js
npm/scripts/: install.js
scripts/: build.sh  clean.sh  format.sh  release.sh  test.sh
src/: CMakeLists.txt
src/api/: nah_c_api.cpp
src/compose/: compose.cpp
src/config/: host_profile.cpp  install_record.cpp  nak_record.cpp
src/contract/: capabilities.cpp  contract.cpp  expansion.cpp  nak_selection.cpp  semver.cpp  types.cpp  warnings.cpp
src/manifest/: manifest.cpp  manifest_generate.cpp  tlv_decode.cpp  tlv_encode.cpp
src/materializer/: materializer.cpp
src/nahhost/: nahhost.cpp
src/packaging/: packaging.cpp
src/platform/: atomic_io.cpp  path_utils.cpp  section_reader.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_nah.cpp
test_package/src/: test_nah.cpp
tests/integration/: CMakeLists.txt  cli_tests.cpp  component_tests.cpp
tests/unit/: CMakeLists.txt  c_api_tests.cpp  capabilities_tests.cpp  compose_contract_tests.cpp  compose_tests.cpp  contract_tests.cpp  expansion_tests.cpp  host_profile_tests.cpp  install_record_tests.cpp  manifest_generate_tests.cpp  manifest_parse_tests.cpp  manifest_tests.cpp  materializer_tests.cpp  nah_components_tests.cpp  nah_core_tests.cpp  nah_fs_tests.cpp  nah_host_tests.cpp  nah_json_tests.cpp  nah_semver_tests.cpp  nak_record_tests.cpp  nak_selection_tests.cpp  override_tests.cpp  packaging_tests.cpp  path_tests.cpp  profile_resolution_tests.cpp  semver_tests.cpp  test_fs_standalone.cpp  tlv_tests.cpp  trust_tests.cpp  warnings_tests.cpp
tools/: CMakeLists.txt
tools/nah/: CMakeLists.txt  common.hpp  main.cpp  tools.cpp
tools/nah/commands/: components.cpp  host.cpp  init.cpp  install.cpp  launch.cpp  list.cpp  manifest.cpp  pack.cpp  profile.cpp  run.cpp  show.cpp  uninstall.cpp  which.cpp
